# card

./: .gitignore  README.md  compose.yml  db_dump_UTF8.sql  hello.py  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/: app.py  database.py  models.py
src/templates/: cartridges.html  create_cartridge.html  department_cartridges.html  index.html  send_to_sc.html  service.html  storage_all.html
templates/: arrived_today.html  cartridge_edit.html  cartridge_v_sc.html  create_cartridge.html  spis.html  storage_all.html  used_in_warehouse.html
