[project]
name = "catr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]
